CMAKE_MINIMUM_REQUIRED ( VERSION 2.8 )

PROJECT ("multithreaded-udp-server")
SET(PROJECT_VERSION_MAJOR 0)
SET(PROJECT_VERSION_MINOR 1)

SET(OUTPUT_ELF "${CMAKE_PROJECT_NAME}-${PROJECT_VERSION_MAJOR}-${PROJECT_VERSION_MINOR}")

SET(CMAKE_BUILD_TYPE Debug)

INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/include)
AUX_SOURCE_DIRECTORY(src SRCS)

SET(CMAKE_C_COMPILER "gcc")
SET(EXTRA_C_FLAGS "${EXTRA_C_FLAGS} -fpic")
SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${EXTRA_C_FLAGS}")
SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall")
SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Winline")
SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Werror")
SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -g")
SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fPIE")

FIND_PACKAGE(Threads)

ADD_EXECUTABLE(${OUTPUT_ELF} ${SRCS})
TARGET_LINK_LIBRARIES(${OUTPUT_ELF} ${CMAKE_THREAD_LIBS_INIT})

